1999-08-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (TopLevel): Don't require `widget'.


1999-08-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* MU-CITE: Version 8.0 was released.

1999-08-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (detect-paragraph-cited-prefix): Use `car' and `cdr'
	instead of `cadr'.

	* mu-register.el (mu-cite-save-registration-file): Remove text
	properties from the strings to be registered and quote them using
	`prin1-to-string'.

	* Makefile (PACKAGE): Rename from "mu" to "mu-cite".
	(invoice): New target.

1999-08-03  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-register.el (mu-cite-get-prefix-register-verbose-method): Bind
	`minibuffer-allow-text-properties' to nil; use
	`mu-cite-remove-text-properties'; use `if' instead of `when'.
	(mu-cite-get-prefix-register-method): Ditto.
	(mu-cite-save-registration-file): Don't use `prin1-to-string' for
	avoiding text properties.

	* mu-bbdb.el (mu-bbdb-get-prefix-register-verbose-method): Bind
	`minibuffer-allow-text-properties' to nil; use
	`mu-cite-remove-text-properties'.
	(mu-bbdb-get-prefix-register-method): Ditto.

	* mu-cite.el (compress-cited-prefix): Use `if' instead of `when'.
	(mu-cite-remove-text-properties): New macro for removing text
	properties under FSF Emacs from 19.7 to under 20.1.  It is
	suggested by Masahiro MURATA <muse@ba2.so-net.ne.jp>.

	* NEWS: Document that text properties in the registration file is
	not recommended.

1999-08-02  Katsumi Yamaoka   <yamaoka@jpl.org>

	* NEWS: New file.

1999-07-30  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mu-cite.el (mu-cite-ml-count-field-list): Don't use
	`mu-cite-custom-set-variable'.
	(mu-cite-top-format): New implementation for customization.
	(mu-cite-prefix-format): Ditto.
	(mu-cite-custom-set-variable): Remove function.
	(mu-cite-choose-top-format): Remove widget.
	(mu-cite-choose-prefix-format): Remove widget.
	(TopLevel): Don't use `mapcar' for defining obsolete functions.